@@ -475,6 +475,10 @@
 								<requireMavenVersion>
 									<version>[3.1.1,)</version>
 								</requireMavenVersion>
+								<requireJavaVersion>
+									<!-- FIXME: remove the upper bound once we migrated to Spring 5 -->
+									<version>[11,19)</version>
+								</requireJavaVersion>
 							</rules>
 						</configuration>
 					</execution>
@@ -493,7 +497,7 @@
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>2.22.2</version>
 				<configuration>
-					<argLine>-Dlog4j1.compatibility=true -Djava.util.logging.manager=org.apache.logging.log4j.jul.LogManager</argLine>
+					<argLine>${extraJvmArgs}</argLine>
 					<redirectTestOutputToFile>true</redirectTestOutputToFile>
 					<excludes>
 						<exclude>**/*Tests.java</exclude>
@@ -508,7 +512,7 @@
 				<artifactId>maven-failsafe-plugin</artifactId>
 				<version>2.22.2</version>
 				<configuration>
-					<argLine>-Dlog4j1.compatibility=true -Djava.util.logging.manager=org.apache.logging.log4j.jul.LogManager</argLine>
+					<argLine>${extraJvmArgs}</argLine>
 					<redirectTestOutputToFile>true</redirectTestOutputToFile>
 					<includes>
 						<include>**/*Test.java</include>
@@ -647,6 +651,8 @@
 		</plugins>
 	</reporting>
 	<properties>
+		<!-- TODO: move this into pavlab-starter-parent -->
+		<maven.compiler.release>8</maven.compiler.release>
 		<gsec.version>0.0.15</gsec.version>
 		<spring.version>3.2.18.RELEASE</spring.version>
 		<spring.security.version>3.2.10.RELEASE</spring.security.version>
@@ -666,5 +672,13 @@
 		<skipUnitTests>${skipTests}</skipUnitTests>
 		<!--suppress UnresolvedMavenProperty -->
 		<skipIntegrationTests>${skipTests}</skipIntegrationTests>
+		<extraJvmArgs>
+			-Dlog4j1.compatibility=true
+			-Djava.util.logging.manager=org.apache.logging.log4j.jul.LogManager
+			-Djava.awt.headless=true
+			<!-- FIXME: remove this once we've migrated to Spring 5 -->
+			<!-- this flag is ignored starting Java 17 -->
+			--add-opens=java.base/java.lang=ALL-UNNAMED
+		</extraJvmArgs>
 	</properties>
 </project>
